<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/top_ranking_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/qb_px_40"
        android:layout_marginBottom="@dimen/qb_px_40"
        android:layout_marginStart="@dimen/qb_px_150"
        android:layout_marginEnd="@dimen/qb_px_150"
        android:gravity="center"
        android:weightSum="4"
        >
        <!--<RadioButton
            android:id="@+id/top_ranking_day"
            android:layout_width="0dp"
            android:layout_height="@dimen/qb_px_70"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/bg_ranking_radio"
            android:textSize="@dimen/qb_px_34"
            android:textColor="@drawable/text_color_ranking_check"
            android:text="@string/label_btn_ranking_day"
            android:gravity="center"
            />-->
        <RadioButton
            android:id="@+id/top_ranking_week"
            android:layout_width="0dp"
            android:layout_height="@dimen/qb_px_70"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/bg_ranking_radio"
            android:textSize="@dimen/qb_px_34"
            android:textColor="@drawable/text_color_ranking_check"
            android:text="@string/label_btn_ranking_week"
            android:gravity="center"
            android:layout_marginStart="@dimen/qb_px_30"
            />
        <RadioButton
            android:id="@+id/top_ranking_month"
            android:layout_width="0dp"
            android:layout_height="@dimen/qb_px_70"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/bg_ranking_radio"
            android:textSize="@dimen/qb_px_34"
            android:textColor="@drawable/text_color_ranking_check"
            android:text="@string/label_btn_ranking_month"
            android:gravity="center"
            android:layout_marginStart="@dimen/qb_px_30"
            />
        <RadioButton
            android:id="@+id/top_ranking_all"
            android:layout_width="0dp"
            android:layout_height="@dimen/qb_px_70"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/bg_ranking_radio"
            android:textSize="@dimen/qb_px_34"
            android:textColor="@drawable/text_color_ranking_check"
            android:text="@string/label_btn_ranking_all"
            android:gravity="center"
            android:layout_marginStart="@dimen/qb_px_30"
            />
    </RadioGroup>
</RelativeLayout>