<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity_default"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <include layout="@layout/layout_user_info" />

            <LinearLayout
                android:id="@+id/fragment_mine_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/qb_px_40"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_message"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_message"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />
            <LinearLayout
                android:id="@+id/fragment_mine_cash"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_cash"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_cash"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
                <TextView
                    android:id="@+id/fragment_mine_cash_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/label_gray"
                    android:text="200秀币"
                    android:layout_marginStart="@dimen/qb_px_20"
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/qb_px_20"
                    />
                <ImageView
                    android:layout_width="@dimen/qb_px_22"
                    android:layout_height="@dimen/qb_px_40"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_arrow_enter"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />

            <LinearLayout
                android:id="@+id/fragment_mine_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_message"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_info"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />
            <LinearLayout
                android:id="@+id/fragment_mine_w_bind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_bind_w"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_bind_w"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
                <TextView
                    android:id="@+id/fragment_mine_w_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/label_gray"
                    android:text="未绑定"
                    android:layout_marginStart="@dimen/qb_px_20"
                    android:layout_marginEnd="@dimen/qb_px_20"
                    android:gravity="end"
                    />
                <ImageView
                    android:layout_width="@dimen/qb_px_22"
                    android:layout_height="@dimen/qb_px_40"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_arrow_enter"
                    android:visibility="invisible"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />
            <LinearLayout
                android:id="@+id/fragment_mine_phone_bind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_bind_phone"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_bind_phone"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
                <TextView
                    android:id="@+id/fragment_mine_phone_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/label_gray"
                    android:text="已绑定"
                    android:layout_marginStart="@dimen/qb_px_20"
                    android:layout_marginEnd="@dimen/qb_px_20"
                    android:gravity="end"
                    />
                <ImageView
                    android:layout_width="@dimen/qb_px_22"
                    android:layout_height="@dimen/qb_px_40"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_arrow_enter"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />

            <LinearLayout
                android:id="@+id/fragment_mine_about_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_144"
                android:orientation="horizontal"
                android:paddingStart="@dimen/qb_px_40"
                android:paddingEnd="@dimen/qb_px_40"
                android:gravity="center_vertical"
                android:background="@drawable/bg_item_press"
                >
                <ImageView
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_mine_message"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/qb_px_44"
                    android:textColor="@color/titleText"
                    android:text="@string/label_mine_about_us"
                    android:layout_marginStart="@dimen/qb_px_20"
                    />
            </LinearLayout>
            <include layout="@layout/line_layout" />
            
            <TextView
                android:id="@+id/fragment_mine_logout"
                android:layout_width="@dimen/qb_px_360"
                android:layout_height="@dimen/qb_px_120"
                android:textColor="@color/titleText"
                android:textSize="@dimen/qb_px_44"
                android:gravity="center"
                android:background="@drawable/bg_transparent_bolder_pink"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_logout"
                android:layout_marginTop="@dimen/qb_px_80"
                android:layout_marginBottom="@dimen/qb_px_80"
                />
        </LinearLayout>
    </ScrollView>
    <!-- 标题栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <View
            android:id="@+id/temp_status"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            />
        <android.support.v7.widget.Toolbar
            android:id="@+id/title_bar_parent"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/title_bar_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_126"
                android:background="@color/transparent"
                >
                <LinearLayout
                    android:id="@+id/title_bar_left"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qb_px_126"
                    android:minWidth="@dimen/qb_px_126"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="@dimen/qb_px_24"
                    android:paddingStart="@dimen/qb_px_24"
                    >
                    <ImageView
                        android:layout_width="@dimen/qb_px_60"
                        android:layout_height="@dimen/qb_px_60"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_back"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/fragment_mine_right"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qb_px_126"
                    android:minWidth="@dimen/qb_px_126"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/qb_px_24"
                    android:paddingStart="@dimen/qb_px_24"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="@dimen/qb_px_60"
                        android:layout_height="@dimen/qb_px_60"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_more_point"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/fragment_mine_right_2"
                    android:layout_toStartOf="@id/fragment_mine_right"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/qb_px_126"
                    android:minWidth="@dimen/qb_px_126"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/qb_px_24"
                    android:paddingStart="@dimen/qb_px_24"
                    android:gravity="center"
                    >
                    <ImageView
                        android:id="@+id/fragment_mine_right_image"
                        android:layout_width="@dimen/qb_px_60"
                        android:layout_height="@dimen/qb_px_60"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_arrow_right"
                        />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </LinearLayout>
</RelativeLayout>